##Text encoding: utf-8

2014-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/eq-props.ui: new equation properties dialog.

2014-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request Lasem.
	* libs/gccv/Makefile.am: new equation item.
	* libs/gccv/canvas.cc: support default font.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/equation.cc: new equation item.
	* libs/gccv/equation.h: ditto.
	* libs/gccv/line-item.h: typo.
	* libs/gcp/reaction-arrow.cc: accept equations as property.
	* libs/gcp/text.cc: set defult ouline color to transparent.
	* plugins/paint/text/Makefile.am: new equation support.
	* plugins/paint/text/equation.cc: ditto.
	* plugins/paint/text/equation.h: ditto.
	* plugins/paint/text/mathtool.cc: ditto.
	* plugins/paint/text/mathtool.h: ditto.
	* plugins/paint/text/plugin.cc: ditto.

2014-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/item.cc: fix initialization issues.
	* libs/gccv/leaf.cc: ditto.
	* libs/gccv/polygon.cc: ditto.
	* libs/gccv/squiggle.cc: ditto.

2014-04-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: new classes.
	* libs/gccv/arc.cc: new Arc class.
	* libs/gccv/arc.h: ditto.
	* libs/gccv/canvas.cc: fixed clipped area with recent Gtk+.
	* libs/gccv/fill-item.cc: add an auto background which is the inverse from
	foreground color.
	* libs/gccv/fill-item.h: ditto.
	* libs/gccv/hash.cc: make able to use auto color.
	* libs/gccv/hash.h: ditto.
	* libs/gccv/leaf.cc: ditto.
	* libs/gccv/line-item.cc: make ApplyLine() return a boolean.
	* libs/gccv/line-item.h: ditto.
	* libs/gccv/path.cc: new Path class.
	* libs/gccv/path.h: ditto.
	* libs/gccv/polygon.cc: make able to use auto colors.
	* libs/gccv/text.h: fixed API doc.
	* libs/gccv/wedge.cc: make able to use auto color.
	* libs/gccv/wedge.h: ditto.
	* libs/gcp/application.cc: change the way tool buttons are created so that
	they appear more in line with the theme.
	* libs/gcp/application.h: ditto.